--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -634,5 +634,6 @@
   "not_allow_to_delegate_in_unpending_state_hint": "not allow to delegate in unpending state",
   "not_allow_to_collect_in_pending_state_hint": "not allow to collect in pending state",
   "delegator_not_exist_hint": "delegator not exist",
-  "not_time_to_collect_hint": "not time to collect"
+  "not_time_to_collect_hint": "not time to collect",
+  "cannot_fint_wallet": "找不到本地钱包"
 }
