--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -634,5 +634,6 @@
   "not_allow_to_delegate_in_unpending_state_hint": "非待啟動狀態不能抵押",
   "not_allow_to_collect_in_pending_state_hint": "該狀態下不能提幣",
   "delegator_not_exist_hint": "代理人不存在",
-  "not_time_to_collect_hint": "未達到提取收益的時間"
+  "not_time_to_collect_hint": "未達到提取收益的時間",
+  "cannot_fint_wallet": "找不到本地钱包"
 }
