refactor[wallet]: update ui

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -125,7 +125,7 @@
   "reinput_wallet_password_label": "Confirm Wallet Password",
   "input_password_again_hint": "Please re-enter the password",
   "password_not_equal_hint": "Inconsistent passwords",
-  "input_confirm_wallet_password_hint": "Please re-enter a wallet password of at least 6 characters",
+  "input_confirm_wallet_password_hint": "Please re-enter a wallet password",
   "next": "continue",
   "account_backup_notice": "Back up your account now",
   "account_backup_next_step_notice": "Next, you will see 12 recovery words in an order that allow you to recover your account",
@@ -137,10 +137,10 @@
   "confirm_mnemonic": "Confirm Mnemonic",
   "confirm_mnemonic_tips": "Click on the words to put them in the correct order",
   "confirm_mnemonic_incorrect": "Your mnemonic is incorrect, please try again",
-  "wallet_create_success": "Account has been created successfully",
-  "wallet_create_success_tips": "Congratulations, your private account has been created successfully",
-  "user_this_account": "Use this private account",
-  "import_account": "Import Account",
+  "wallet_create_success": "Wallet has been created successfully",
+  "wallet_create_success_tips": "Congratulations, your private wallet has been created successfully",
+  "user_this_account": "Use this private wallet",
+  "import_account": "Import Wallet",
   "illegal_mnemonic": "illegal mnemonic",
   "input_resume_mnemonic": "Enter backup mnemonics separated by spaces",
   "please_input_mnemonic": "Please enter mnemonic",
@@ -148,7 +148,7 @@
   "wallet_name_label": "Wallet Name",
   "import_account_fail": "Import Failed",
   "import": "Import",
-  "import_account_success": "The account was successfully imported ",
+  "import_account_success": "The wallet was successfully imported ",
   "import_account_tips": "Congratulations, your private wallet has been successfully imported",
   "wallet_manage": "Manage Wallet",
   "wallet_setting": "Wallet Settings",
@@ -635,5 +635,9 @@
   "not_allow_to_collect_in_pending_state_hint": "not allow to collect in pending state",
   "delegator_not_exist_hint": "delegator not exist",
   "not_time_to_collect_hint": "not time to collect",
-  "cannot_fint_wallet": "找不到本地钱包"
+  "cannot_fint_wallet": "can't fine wallet",
+  "warning_no_sceenshot": "Please do not share and store screenshots, as this may be collected by third-party malware and cause asset loss",
+  "no_screenshot_dialog_confirm": "ok",
+  "no_screenshot_dialog_cancel": "cancel",
+  "no_screenshot_dialog_title": "Don't screenshot"
 }
