--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -116,7 +116,7 @@
   "create_wallet": "创建钱包",
   "import_wallet": "导入钱包",
   "private_wallet_tips": "账户私钥永远不会离开你的设备",
-  "create_wallet_tips": "创建一个私密账户",
+  "create_wallet_tips": "创建一个私密钱包",
   "create_wallet_name_label": "钱包名称",
   "input_wallet_name_hint": "请输入钱包名称",
   "input_wallet_name_length_hint": "请输入6位以内的名称",
@@ -125,7 +125,7 @@
   "reinput_wallet_password_label": "确认密码",
   "input_password_again_hint": "请再次输入密码",
   "password_not_equal_hint": "密码不一致",
-  "input_confirm_wallet_password_hint": "请再次输入至少6位数的钱包密码",
+  "input_confirm_wallet_password_hint": "请再次输入钱包密码",
   "next": "继续",
   "account_backup_notice": "现在备份你的账户",
   "account_backup_next_step_notice": "在下一步中，您将看到12个允许您恢复账户的单词",
@@ -137,10 +137,10 @@
   "confirm_mnemonic": "输入助记词",
   "confirm_mnemonic_tips": "点击单词，把他们按正确的顺序放在一起",
   "confirm_mnemonic_incorrect": "您的助记词不正确，请重新尝试",
-  "wallet_create_success": "账户创建成功",
-  "wallet_create_success_tips": "恭喜，你的私密账户已经创建成功",
-  "user_this_account": "使用该私密账户",
-  "import_account": "导入账户",
+  "wallet_create_success": "钱包创建成功",
+  "wallet_create_success_tips": "恭喜，你的私密钱包已经创建成功",
+  "user_this_account": "使用该私密钱包",
+  "import_account": "导入钱包",
   "illegal_mnemonic": "不是合法的助记词",
   "input_resume_mnemonic": "输入用空格隔开的备份助记词",
   "please_input_mnemonic": "请输入助记词",
@@ -148,7 +148,7 @@
   "wallet_name_label": "钱包名称",
   "import_account_fail": "导入失败",
   "import": "导 入",
-  "import_account_success": "账户导入成功",
+  "import_account_success": "钱包导入成功",
   "import_account_tips": "恭喜，您的私密钱包已经导入成功",
   "wallet_manage": "钱包管理",
   "wallet_setting": "钱包设置",
@@ -163,7 +163,7 @@
   "delete": "删除",
   "backup_notice_label": "备份提示",
   "backup_wallet_notice_text1": "获得助记词等于拥有钱包资产所有权",
-  "backup_wallet_mnemonic_title": "备份助记次",
+  "backup_wallet_mnemonic_title": "备份助记词",
   "backup_wallet_mnemonic_text": "使用纸和笔正确抄写助记词\n如果你的手机丢失、被盗。损坏，助记词将可以恢复你的资产",
   "backup_offline_save_title": "离线保管",
   "backup_offline_save_text": "妥善保管至隔离网络的安全地方\n请勿将助记词在联网环境下分享和存储，比如邮件、相册、社交应用等",
@@ -278,18 +278,18 @@
   "scan_name_cellular": "基站",
   "scan_name_bluetooth": "蓝牙",
   "scan_name_gps": "GPS",
-  "scan_name_start" : "开始",
-  "scan_name_title" : "信号扫描",
-  "scan_signal_upload_protocol" : "信号上传协议",
-  "scan_exit_tips" : "正在扫描中，确认退出吗?",
-  "scan_hyn_is_empty" : "HYN wallet 为空",
+  "scan_name_start": "开始",
+  "scan_name_title": "信号扫描",
+  "scan_signal_upload_protocol": "信号上传协议",
+  "scan_exit_tips": "正在扫描中，确认退出吗?",
+  "scan_hyn_is_empty": "HYN wallet 为空",
   "latest_version_tip": "已经是最新版本",
-  "scan_finish" : "扫描完成",
+  "scan_finish": "扫描完成",
   "scan_ing_func": "正在扫描{scanName}信号",
-  "scan_upload_error" : "上传失败",
+  "scan_upload_error": "上传失败",
   "scan_upload_signal_success_hint": "信号数据上传成功",
   "scan_thanks_contribution_signal_hint": "感谢您做的数据贡献！",
-  "scan_confirm_upload" : "上传信号数据",
+  "scan_confirm_upload": "上传信号数据",
   "scan_collect_signal_func": "已收集到{num}个信号",
   "selected_area": "选择地区",
   "what_region_use_titan": "你在什么地区使用{app}?",
@@ -635,5 +635,9 @@
   "not_allow_to_collect_in_pending_state_hint": "该状态下不能提币",
   "delegator_not_exist_hint": "代理人不存在",
   "not_time_to_collect_hint": "未达到提取收益的时间",
-  "cannot_fint_wallet": "找不到本地钱包"
+  "cannot_fint_wallet": "找不到本地钱包",
+  "warning_no_sceenshot": "请勿截屏分享和存储，这将可能被第三方恶意软件收集，造成资产损失",
+  "no_screenshot_dialog_confirm": "知道了",
+  "no_screenshot_dialog_cancel": "取消",
+  "no_screenshot_dialog_title": "请勿截屏"
 }
