[auth]: add Auth-dialog bloc

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -216,7 +216,7 @@
   "police_station_text": "有困难，找警察",
   "more_dmap": "更多DMap应用持续添加~",
   "close": "关闭",
-  "start_encryption": "开始加密",
+  "start_encryption": "加密分享",
   "no_data": "暂无数据",
   "hot_area": "热门地区",
   "recommended_area": "推荐地区",
