--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -216,7 +216,7 @@
   "police_station_text": "有困難，找警察",
   "more_dmap": "更多DMap應用持續添加~",
   "close": "關閉",
-  "start_encryption": "開始加密",
+  "start_encryption": "加密分享",
   "no_data": "暫無數據",
   "hot_area": "熱門地區",
   "recommended_area": "推薦地區",
