[wallet]: add new password dialog

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -121,7 +121,7 @@
   "input_wallet_name_hint": "Please input wallet name",
   "input_wallet_name_length_hint": "Name must be within 6 characters",
   "create_wallet_password_label": "Wallet Password",
-  "input_wallet_password_length_hint": "Wallet password must be at least 6 characters",
+  "input_wallet_password_length_hint": "Wallet password must be at 6 numbers",
   "reinput_wallet_password_label": "Confirm Wallet Password",
   "input_password_again_hint": "Please re-enter the password",
   "password_not_equal_hint": "Inconsistent passwords",
@@ -278,18 +278,18 @@
   "scan_name_cellular": "Cell Tower",
   "scan_name_bluetooth": "Bluetooth",
   "scan_name_gps": "GPS",
-  "scan_name_start" : "Start",
-  "scan_name_title" : "Signal scan",
+  "scan_name_start": "Start",
+  "scan_name_title": "Signal scan",
   "latest_version_tip": "Already the latest version",
-  "scan_signal_upload_protocol" : "Privacy Policy",
-  "scan_exit_tips" : "Scanning, are you sure you want to quit?",
-  "scan_hyn_is_empty" : "No HYN wallet",
-  "scan_finish" : "Scan complete",
+  "scan_signal_upload_protocol": "Privacy Policy",
+  "scan_exit_tips": "Scanning, are you sure you want to quit?",
+  "scan_hyn_is_empty": "No HYN wallet",
+  "scan_finish": "Scan complete",
   "scan_ing_func": "Scanning {scanName}",
-  "scan_upload_error" : "Upload failed",
+  "scan_upload_error": "Upload failed",
   "scan_upload_signal_success_hint": "Signal data uploaded successfully",
   "scan_thanks_contribution_signal_hint": "Thank you for your data contribution！",
-  "scan_confirm_upload" : "Upload signal data",
+  "scan_confirm_upload": "Upload signal data",
   "scan_collect_signal_func": "{Num} signals collected",
   "selected_area": "Select region",
   "what_region_use_titan": "What's the region do you use {app}?",
