--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -121,7 +121,7 @@
   "input_wallet_name_hint": "请输入钱包名称",
   "input_wallet_name_length_hint": "请输入6位以内的名称",
   "create_wallet_password_label": "钱包密码",
-  "input_wallet_password_length_hint": "请输入6位的密码",
+  "input_wallet_password_length_hint": "请输入6位的数字密码",
   "reinput_wallet_password_label": "确认密码",
   "input_password_again_hint": "请再次输入密码",
   "password_not_equal_hint": "密码不一致",
