[wallet]: add Forgot password page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -639,5 +639,7 @@
   "warning_no_sceenshot": "Please do not share and store screenshots, as this may be collected by third-party malware and cause asset loss",
   "no_screenshot_dialog_confirm": "confirm",
   "no_screenshot_dialog_cancel": "cancel",
-  "no_screenshot_dialog_title": "Don't screenshot"
+  "no_screenshot_dialog_title": "Don't screenshot",
+  "forgot_password_content_1": "Password recovery is not supported, but you can reset the password by importing the wallet. The new password will overwrite the old password",
+  "forgot_password_content_2": "If you have not backed up the corresponding mnemonic word or private key, you can enter the password repeatedly to try, no limit"
 }
