--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -120,12 +120,12 @@
   "create_wallet_name_label": "钱包名称",
   "input_wallet_name_hint": "请输入钱包名称",
   "input_wallet_name_length_hint": "请输入6位以内的名称",
-  "create_wallet_password_label": "钱包密码",
-  "input_wallet_password_length_hint": "请输入6位的数字密码",
-  "reinput_wallet_password_label": "确认密码",
+  "create_wallet_password_label": "支付密码",
+  "input_wallet_password_length_hint": "请输入至少6位的密码",
+  "reinput_wallet_password_label": "确认支付密码",
   "input_password_again_hint": "请再次输入密码",
   "password_not_equal_hint": "密码不一致",
-  "input_confirm_wallet_password_hint": "请再次输入钱包密码",
+  "input_confirm_wallet_password_hint": "请再次输入支付密码",
   "next": "继续",
   "account_backup_notice": "现在备份你的账户",
   "account_backup_next_step_notice": "在下一步中，您将看到12个允许您恢复账户的单词",
