--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -642,5 +642,44 @@
   "no_screenshot_dialog_title": "请勿截屏",
   "forgot_password_content_1": "不支持找回密码，但你可以通过导入钱包重置密码。新密码会覆盖旧密码",
   "forgot_password_content_2": "如果你未备份对应的助计词或私钥，可以反复输入密码尝试，没有次数限制",
-  "forgot_password": "忘记密码"
+  "forgot_password": "忘记密码",
+  "advanced_mode": "高级模式",
+  "software_agreement": "软件协议",
+  "save_qr_code": "保存二维码",
+  "create_import_wallet_before_using_feature": "您当前还没有钱包，请先创建或导入钱包再使用此功能",
+  "go_setting": "去设置",
+  "public_key_need_password": "获取公钥需要输入密码授权",
+  "authorized": "授权",
+  "save_success": "保存成功",
+  "save_fail": "保存失败",
+  "node": "节点",
+  "input_payment_password": "请输入支付密码",
+  "double_check_password_error": "两次输入密码不一致",
+  "receive_an_encrypted_message": "您收到一个加密位置信息, 是否打开",
+  "open": "打开",
+  "key_pair_error_share_location_again": "密钥对异常，请重新进行位置分享操作",
+  "activate_btc": "激活BTC",
+  "safety_certification_by_organizations": "经过权威机构安全认证",
+  "atlas_consensus_node": "Atlas共识节点",
+  "consensus_guarantee_for_hyberion": "为海伯利安生态提供共识保证",
+  "home_atlas_description": "''Atlas是以空间共识和弹性空间分片为主要特征的高性能地图区块链，可解决空间分片，账户资产转移，资产确认等与空间相关的服务需求。具有抗审查、开放参与、高容错等特点。未来待Atlas链搭建完成，将支持海伯利安成为服务100亿人的去中心化全球地图经济体系。\n\nAtlas将在技术上实现高可伸缩性、低延迟性、低成本、隐私保护、可扩展性和交互性，支持全球体量巨大的地图定位请求和位置搜索请求。未来主网上线之时，用户将能成为Atlas节点，参与提升区块链网络的安全、性能等，并获得HYN奖励。Atlas节点的奖励细则还有待确认，但将与Map3网络的边缘节点以及核心节点关联统一。''",
+  "in_progress": "进行中...",
+  "node_not_create_by_app_withdraw_fail": "该节点并非创建于{app_name}，提取失败",
+  "not_exceed_remain_share": "不能超过剩余份额",
+  "share_contract": "分享合约",
+  "scan_qr_code_detail": "扫描二维码查看详情",
+  "latest_boot_node": "最新启动节点",
+  "see_more": "查看更多",
+  "show_qr_code": "显示二维码",
+  "legal_address_starting_1_or_bc_or_3": "请输入1、bc、或3开头的合法接收者地址",
+  "save_update": "保存更新",
+  "wallet_address_copied": "钱包地址已复制",
+  "wallet_address": "钱包地址",
+  "face_fingerprint_password": "面容/指纹与密码",
+  "update_success": "更新成功",
+  "update_error": "更新出错",
+  "has_unconfirm_btc_wait": "你有未确认的比特币转账，请稍后再试！",
+  "pending": "待确认",
+  "confirm_num": "确认{num}次",
+  "go_to_settings": "前往设置"
 }
