【Add】 add new poi

--- a/lib/l10n/intl_zh_HK.arb
+++ b/lib/l10n/intl_zh_HK.arb
@@ -703,5 +703,122 @@
   "disclaimer_detail_non_secret_payment": "手机厂商的生物识别技术安全等级各有差异，我们提醒用户谨慎使用该便捷功能。使用过程中出现任何生物识别技术漏洞引发的资产风险，本软件不承担法律责任。",
   "non_secret_open_success": "免密支付开启成功",
   "non_secret_open_fail": "免密支付开启失败",
-  "use_face_verify": "使用您的面容进行验证"
+  "use_face_verify": "使用您的面容进行验证",
+"cannot_fint_wallet": "找不到本地钱包",
+  "wallet_test": "钱包测试",
+  "active_btc": "激活BTC",
+  "show_qr": "显示二维码",
+  "wallet_address_error_hint": "请输入1、bc、或3开头的合法接收者地址",
+  "save_update": "保存更新",
+  "update_success": "更新成功",
+  "update_failed": "更新出错",
+  "to_be_confirmed": "待确认",
+  "unconfirmed_btc_transfer_please_try_again_later_hint": "你有未确认的比特币转账，请稍后再试！",
+  "transaction_detail_state_func": "确认{transactionDetailState}次",
+  "add_position_image_title_1": "拍摄时请保证商铺名称清晰完整，并拍全招牌和门脸",
+  "add_position_image_title_2": "拍摄时请拍清楚商铺的左右相邻商铺",
+  "add_position_image_title_3": "照片类型分为室外和室内，室外必填，室内选填，两者都有更容易评为优质POI哦",
+  "add_position_image_title_4": "请勿拍摄移动摊位等不固定地点，请勿拍摄军事禁区等涉密地点",
+  "add_position_image_subtitle_2": "（如相邻无商铺，请拍清楚商铺左右环境）",
+  "shooting_specifications_title": "拍摄规范",
+  "examples": "示例",
+  "outdoor_example": "室外示例",
+  "indoor_example": "室内示例",
+  "swipe_left_and_right_title": "左右划动切换",
+  "network_service_error_toast": "网络服务错误",
+  "error_code_func": "错误码:{errorCode}",
+  "network_connection_timeout_please_try_again_later_toast": "网络连接超时，请稍后重试",
+  "picture_format_is_not_supported_yet_toast": "图片格式暂不支持",
+  "place_name": "地点名称",
+  "outdoor": "室外",
+  "unit_zhang": "{num}张",
+  "address": "地址",
+  "location_on_the_map": "地图上的位置",
+  "edit_location": "修改位置",
+  "click_where_to_edit": "点击编辑所在位置",
+  "prompt": "提示",
+  "add_position_page_prompt": "1. 请勿提交违反地方法规的地点，如军事基地、政治敏感位置等\n\n2. 你提交地点后，如果社区博弈校验该地点是真实有效，就会纳入可信地点，在地图上显示出来。",
+  "agree": "同意",
+  "photo_specification": "拍照规范",
+  "unsupported_image_formats_will_be_removed_selected_toast": "不支持的图片格式将被移除选中",
+  "add_location_data_please_confirm_actual_situation_toast": "你将添加一个地点数据，请确认你已经按照实际情况填写地点相关的资料。",
+  "confirm_location": "确认位置",
+  "balance_is_not_enough_to_transfer_toast_func": "您的账户余额不足以划转节点总收益5%(≈ {withdrawnStr})到直推人上，请先充值余额。",
+  "latest_boot_node": "最新启动节点",
+  "see_more": "查看更多",
+  "share_contract": "分享合约",
+  "scan_qr_code_for_details": "扫描二维码查看详情",
+  "cannot_exceed_the_remaining_share": "不能超过剩余份额",
+  "node_not_created_in_x_extraction_failed": "该节点并非创建于{name}，提取失败",
+  "handle_abnormal_reward_transfer_toast_func": "处理奖励转移发生异常，错误码：{code}",
+  "failed_to_bind_wallet_please_exit_task_and_try_again_toast": "绑定钱包失败，请退出任务重试",
+  "uncertain": "不确定",
+  "back": "返回",
+  "whether_above_picture_real_picture_of_the_place_toast": "以上图片是否该地点的实景图片？",
+  "network_error_please_check_whether_the_network_connection_normal_toast": "网络错误，请检查网络连接是否正常",
+  "failed_to_request_data_to_be_verified_error_code_toast_func": "请求待验证数据失败, 错误码:{code}",
+  "failed_to_post_confirm_data_to_be_verified_error_code_toast": "提交验证数据失败, 错误码:${code}",
+  "please_confirm_answered_verification_question_truthfully_toast": "请确认你已如实回答校验问题。",
+  "exist": "存在",
+  "does_not_exist": "不存在",
+  "compliance_with_local_regulations": "符合地方法规",
+  "violation_of_local_regulations": "违反地方法规",
+  "deviation_less_than_50_meters": "偏差小于50米",
+  "deviation_less_than_100_meters": "偏差小于100米",
+  "deviation_less_than_200_meters": "偏差小于200米",
+  "deviation_more_than_meters": "偏差较大",
+  "another": "换一个",
+  "ignore_alert_view_detail": "如果你对当前地点不熟悉，可以尝试换一个新的地点检验！",
+  "ignore_alert_view_content": "请确定需要换一个地点校验任务吗？",
+  "confirm_alert_view_detail": "如果社区博弈结果和你回答的吻合，则判定本次校验是诚实的！",
+  "confirm_alert_view_content": "请确定你已如实回答校验问题。",
+  "exist_alert_view_content": "你认为该地点在地图上是不存在的。",
+  "exist_alert_view_detail": "如果社区博弈结果和你回答的吻合，则判定本次校验是诚实的！",
+  "correct": "确认无误",
+  "return_check": "返回校验",
+  "regulation": "合规",
+  "photo": "照片",
+  "failed_to_request_data_to_be_verified_error_code_toast": "请求待验证数据失败！",
+  "failed_to_post_confirm_data_to_be_verified_error_code": "提交验证数据失败",
+  "verification_location": "校验地点",
+  "position": "位置",
+  "regulation_title": "该地点符合地方法规吗？",
+  "regulation_subtitle": "如某些国家/地区不允许出现军事基地、政治敏感位置、黄色服务等。",
+  "website_title": "该地点的服务网址是以下网址吗？",
+  "telphone_title": "该地点的营业电话是以下号码吗？",
+  "work_time_title": "该地点的营业时间是一以下的时间段吗？",
+  "image_toast_title": "以下图片是否是该地点的现场照片？",
+  "map_in_title": "地图上的",
+  "map_in_subtitle": "地点位置准确吗？",
+  "map_in_exist_subtitle": "地点存在吗？",
+  "category_title": "该地点的类别是",
+  "category_suffix_title": "吗？",
+  "restaurant": "美食",
+  "lodging": "酒店",
+  "tourist_attraction": "景点",
+  "parking": "停车场",
+  "grocery_or_supermarket": "超市",
+  "shopping_mall": "商场",
+  "net_bar": "网吧",
+  "wc": "厕所",
+  "change_background_image_title": "更换背景图：",
+  "my_invitation_link": "我的邀请链接",
+  "first_step_creat_import_wallet_toast": "你需要先创建/导入钱包账户，才能查看你的钱包账户相关合约数据。",
+  "first_step_creat_import_wallet_title": "请先创建/导入钱包",
+  "false_location_determination": "虚假地点判定",
+  "determine_cause": "判断原因：",
+  "you_incorrectly_verified_place_you_submitted": "您错误校验了自己提交的地点！",
+  "false_data_toast": "您错误校验了自己提交的地点，系统认为您不确定该地点是否正确，默认判定为虚假数据",
+  "where_you_submit": "你提交的地点",
+  "wrong_check_record": "错误的校验记录",
+  "determine_whether_picture_is_a_real_picture": "判定图片是否实景图片",
+  "your_answer": "你的答案：",
+  "wrong_answer": "回答错误！",
+  "poi_real_picture": "该POI实景图片",
+  "scanning_location": "扫描地点",
+  "add_location": "添加地点",
+  "task_failed": "任务失败",
+  "task_is_not_finish": "任务未达标!",
+  "false_data_at_location_detail_toast": "您提交的地点存在虚假数据!",
+  "you_still_have_unfinished_tasks_detail_toast": "加油哦，你还有任务未完成"
 }
