add wallet ko trans

--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -635,192 +635,85 @@
   "not_allow_to_collect_in_pending_state_hint": "not allow to collect in pending state",
   "delegator_not_exist_hint": "delegator not exist",
   "not_time_to_collect_hint": "not time to collect",
-  "cannot_fint_wallet": "找不到本地钱包",
-  "advanced_mode": "高级模式",
-  "software_agreement": "软件协议",
-  "save_qr_code": "保存二维码",
-  "create_import_wallet_before_using_feature": "您当前还没有钱包，请先创建或导入钱包再使用此功能",
-  "go_setting": "去设置",
-  "public_key_need_password": "获取公钥需要输入密码授权",
-  "authorized": "授权",
-  "save_success": "保存成功",
-  "save_fail": "保存失败",
-  "node": "节点",
-  "input_payment_password": "请输入支付密码",
-  "double_check_password_error": "两次输入密码不一致",
-  "receive_an_encrypted_message": "您收到一个加密位置信息, 是否打开",
-  "open": "打开",
-  "key_pair_error_share_location_again": "密钥对异常，请重新进行位置分享操作",
-  "activate_btc": "激活BTC",
-  "safety_certification_by_organizations": "经过权威机构安全认证",
-  "atlas_consensus_node": "Atlas共识节点",
-  "consensus_guarantee_for_hyberion": "为海伯利安生态提供共识保证",
-  "home_atlas_description": "''Atlas是以空间共识和弹性空间分片为主要特征的高性能地图区块链，可解决空间分片，账户资产转移，资产确认等与空间相关的服务需求。具有抗审查、开放参与、高容错等特点。未来待Atlas链搭建完成，将支持海伯利安成为服务100亿人的去中心化全球地图经济体系。\n\nAtlas将在技术上实现高可伸缩性、低延迟性、低成本、隐私保护、可扩展性和交互性，支持全球体量巨大的地图定位请求和位置搜索请求。未来主网上线之时，用户将能成为Atlas节点，参与提升区块链网络的安全、性能等，并获得HYN奖励。Atlas节点的奖励细则还有待确认，但将与Map3网络的边缘节点以及核心节点关联统一。''",
-  "in_progress": "进行中...",
-  "node_not_create_by_app_withdraw_fail": "该节点并非创建于{app_name}，提取失败",
-  "not_exceed_remain_share": "不能超过剩余份额",
-  "share_contract": "分享合约",
-  "scan_qr_code_detail": "扫描二维码查看详情",
-  "latest_boot_node": "最新启动节点",
-  "see_more": "查看更多",
-  "show_qr_code": "显示二维码",
-  "legal_address_starting_1_or_bc_or_3": "请输入1、bc、或3开头的合法接收者地址",
-  "save_update": "保存更新",
-  "wallet_address_copied": "钱包地址已复制",
-  "wallet_address": "钱包地址",
-  "face_fingerprint_password": "面容/指纹与密码",
-  "update_success": "更新成功",
-  "update_error": "更新出错",
-  "has_unconfirm_btc_wait": "你有未确认的比特币转账，请稍后再试！",
-  "pending": "待确认",
-  "confirm_num": "确认{num}次",
-  "go_to_settings": "前往设置",
-  "go_to_setting_page_open_face_id": "请到设置页开启您的面容 ID",
-  "go_to_setting_page_open_touch_id": "请到设置页开启您的Touch ID",
-  "face_id_not_available_try_again": "面容 ID不可用，请稍后重试",
-  "touch_id_not_available_try_again": "Touch ID不可用，请稍后重试",
-  "face_recognition": "面容识别",
-  "fingerprint_recognition": "指纹识别",
-  "need_fingerprint": "需要指纹",
-  "fingerprint_recognition_success": "指纹识别成功",
-  "fingerprint_sensor": "指纹传感器",
-  "no_fingerprint_detected": "未检测到指纹",
-  "go_setting_open_fingerprint": "请到设置页开启您的指纹识别",
-  "face_fingerprint_verify": "使用您的面容或指纹进行验证",
-  "biometrics": "生物识别",
-  "biometrics_unavailable": "生物识别不可用",
-  "go_setting_page_set_pin": "请到设置页设置您的pin",
-  "too_many_fail_try_again": "失败次数过多，请稍后重试",
-  "too_many_fail_biometrics_unavailable": "失败次数过多，生物识别暂不可用",
-  "not_support_other_systems": "您在其他操作系统，暂不支持",
-  "secret_free_payment": "免密支付",
-  "introduct_non_secret_payment": "免密支付介绍",
-  "non_secret_payment_introduction_detail": "免密支付将您的钱包密码通过安全加密算法存储至手机设备的Keychain / KeyStore中，交易时调用生物识别（指纹或面容）鉴权，快速完成支付与签名。",
-  "remind_after_open_non_secret_payment": "开启免密支付后，请妥善备份密码。如果忘记密码，可以通过导入助计词 / 私钥，重新设置密码",
-  "risk_warning": "风险提示",
-  "risk_warning_detail_non_secret_payment": "请了解你的手机设备生物识别的安全等级\n大额资产，请勿开启免密支付\n公共手机，请勿开启免密支付\n",
-  "disclaimer": "免责声明",
-  "disclaimer_detail_non_secret_payment": "手机厂商的生物识别技术安全等级各有差异，我们提醒用户谨慎使用该便捷功能。使用过程中出现任何生物识别技术漏洞引发的资产风险，本软件不承担法律责任。",
-  "non_secret_open_success": "免密支付开启成功",
-  "non_secret_open_fail": "免密支付开启失败",
-  "use_face_verify": "使用您的面容进行验证",
-  "cannot_fint_wallet": "找不到本地钱包",
-    "wallet_test": "钱包测试",
-    "active_btc": "激活BTC",
-    "show_qr": "显示二维码",
-    "wallet_address_error_hint": "请输入1、bc、或3开头的合法接收者地址",
-    "save_update": "保存更新",
-    "update_success": "更新成功",
-    "update_failed": "更新出错",
-    "to_be_confirmed": "待确认",
-    "unconfirmed_btc_transfer_please_try_again_later_hint": "你有未确认的比特币转账，请稍后再试！",
-    "transaction_detail_state_func": "确认{transactionDetailState}次",
-    "add_position_image_title_1": "拍摄时请保证商铺名称清晰完整，并拍全招牌和门脸",
-    "add_position_image_title_2": "拍摄时请拍清楚商铺的左右相邻商铺",
-    "add_position_image_title_3": "照片类型分为室外和室内，室外必填，室内选填，两者都有更容易评为优质POI哦",
-    "add_position_image_title_4": "请勿拍摄移动摊位等不固定地点，请勿拍摄军事禁区等涉密地点",
-    "add_position_image_subtitle_2": "（如相邻无商铺，请拍清楚商铺左右环境）",
-    "shooting_specifications_title": "拍摄规范",
-    "examples": "示例",
-    "outdoor_example": "室外示例",
-    "indoor_example": "室内示例",
-    "swipe_left_and_right_title": "左右划动切换",
-    "network_service_error_toast": "网络服务错误",
-    "error_code_func": "错误码:{errorCode}",
-    "network_connection_timeout_please_try_again_later_toast": "网络连接超时，请稍后重试",
-    "picture_format_is_not_supported_yet_toast": "图片格式暂不支持",
-    "place_name": "地点名称",
-    "outdoor": "室外",
-    "unit_zhang": "{num}张",
-    "address": "地址",
-    "location_on_the_map": "地图上的位置",
-    "edit_location": "修改位置",
-    "click_where_to_edit": "点击编辑所在位置",
-    "prompt": "提示",
-    "add_position_page_prompt": "1. 请勿提交违反地方法规的地点，如军事基地、政治敏感位置等\n\n2. 你提交地点后，如果社区博弈校验该地点是真实有效，就会纳入可信地点，在地图上显示出来。",
-    "agree": "同意",
-    "photo_specification": "拍照规范",
-    "unsupported_image_formats_will_be_removed_selected_toast": "不支持的图片格式将被移除选中",
-    "add_location_data_please_confirm_actual_situation_toast": "你将添加一个地点数据，请确认你已经按照实际情况填写地点相关的资料。",
-    "confirm_location": "确认位置",
-    "balance_is_not_enough_to_transfer_toast_func": "您的账户余额不足以划转节点总收益5%(≈ {withdrawnStr})到直推人上，请先充值余额。",
-    "latest_boot_node": "最新启动节点",
-    "see_more": "查看更多",
-    "share_contract": "分享合约",
-    "scan_qr_code_for_details": "扫描二维码查看详情",
-    "cannot_exceed_the_remaining_share": "不能超过剩余份额",
-    "node_not_created_in_x_extraction_failed": "该节点并非创建于{name}，提取失败",
-    "handle_abnormal_reward_transfer_toast_func": "处理奖励转移发生异常，错误码：{code}",
-    "failed_to_bind_wallet_please_exit_task_and_try_again_toast": "绑定钱包失败，请退出任务重试",
-    "uncertain": "不确定",
-    "back": "返回",
-    "whether_above_picture_real_picture_of_the_place_toast": "以上图片是否该地点的实景图片？",
-    "network_error_please_check_whether_the_network_connection_normal_toast": "网络错误，请检查网络连接是否正常",
-    "failed_to_request_data_to_be_verified_error_code_toast_func": "请求待验证数据失败, 错误码:{code}",
-    "failed_to_post_confirm_data_to_be_verified_error_code_toast": "提交验证数据失败, 错误码:${code}",
-    "please_confirm_answered_verification_question_truthfully_toast": "请确认你已如实回答校验问题。",
-    "exist": "存在",
-    "does_not_exist": "不存在",
-    "compliance_with_local_regulations": "符合地方法规",
-    "violation_of_local_regulations": "违反地方法规",
-    "deviation_less_than_50_meters": "偏差小于50米",
-    "deviation_less_than_100_meters": "偏差小于100米",
-    "deviation_less_than_200_meters": "偏差小于200米",
-    "deviation_more_than_meters": "偏差较大",
-    "another": "换一个",
-    "ignore_alert_view_detail": "如果你对当前地点不熟悉，可以尝试换一个新的地点检验！",
-    "ignore_alert_view_content": "请确定需要换一个地点校验任务吗？",
-    "confirm_alert_view_detail": "如果社区博弈结果和你回答的吻合，则判定本次校验是诚实的！",
-    "confirm_alert_view_content": "请确定你已如实回答校验问题。",
-    "exist_alert_view_content": "你认为该地点在地图上是不存在的。",
-    "exist_alert_view_detail": "如果社区博弈结果和你回答的吻合，则判定本次校验是诚实的！",
-    "correct": "确认无误",
-    "return_check": "返回校验",
-    "regulation": "合规",
-    "photo": "照片",
-    "failed_to_request_data_to_be_verified_error_code_toast": "请求待验证数据失败！",
-    "failed_to_post_confirm_data_to_be_verified_error_code": "提交验证数据失败",
-    "verification_location": "校验地点",
-    "position": "位置",
-    "regulation_title": "该地点符合地方法规吗？",
-    "regulation_subtitle": "如某些国家/地区不允许出现军事基地、政治敏感位置、黄色服务等。",
-    "website_title": "该地点的服务网址是以下网址吗？",
-    "telphone_title": "该地点的营业电话是以下号码吗？",
-    "work_time_title": "该地点的营业时间是一以下的时间段吗？",
-    "image_toast_title": "以下图片是否是该地点的现场照片？",
-    "map_in_title": "地图上的",
-    "map_in_subtitle": "地点位置准确吗？",
-    "map_in_exist_subtitle": "地点存在吗？",
-    "category_title": "该地点的类别是",
-    "category_suffix_title": "吗？",
-    "restaurant": "美食",
-    "lodging": "酒店",
-    "tourist_attraction": "景点",
-    "parking": "停车场",
-    "grocery_or_supermarket": "超市",
-    "shopping_mall": "商场",
-    "net_bar": "网吧",
-    "wc": "厕所",
-    "change_background_image_title": "更换背景图：",
-    "my_invitation_link": "我的邀请链接",
-    "first_step_creat_import_wallet_toast": "你需要先创建/导入钱包账户，才能查看你的钱包账户相关合约数据。",
-    "first_step_creat_import_wallet_title": "请先创建/导入钱包",
-    "false_location_determination": "虚假地点判定",
-    "determine_cause": "判断原因：",
-    "you_incorrectly_verified_place_you_submitted": "您错误校验了自己提交的地点！",
-    "false_data_toast": "您错误校验了自己提交的地点，系统认为您不确定该地点是否正确，默认判定为虚假数据",
-    "where_you_submit": "你提交的地点",
-    "wrong_check_record": "错误的校验记录",
-    "determine_whether_picture_is_a_real_picture": "判定图片是否实景图片",
-    "your_answer": "你的答案：",
-    "wrong_answer": "回答错误！",
-    "poi_real_picture": "该POI实景图片",
-    "scanning_location": "扫描地点",
-    "add_location": "添加地点",
-    "task_failed": "任务失败",
-    "task_is_not_finish": "任务未达标!",
-    "false_data_at_location_detail_toast": "您提交的地点存在虚假数据!",
-  "you_still_have_unfinished_tasks_detail_toast": "加油哦，你还有任务未完成",
-  "wallet_password_decrypt": "使用钱包密码解密",
+  "cannot_fint_wallet": "로컬 지갑을 찾을수가 없습니다.",
+  "advanced_mode": "고급 모드",
+  "software_agreement": "소프트웨어 협의",
+  "save_qr_code": "QR코드번호 저장",
+  "create_import_wallet_before_using_feature": "현재는 아직 지갑이 없으니 지갑을 새로 만들거나 혹은 불러오셔서 이 기능을 다시 사용하기 바랍니다.",
+  "go_setting": "설정하기",
+  "public_key_need_password": "공유키를 획득하려면 비밀번호 권한을 입력해야 합니다.",
+  "authorized": "권한 부여",
+  "save_success": "저장 성공",
+  "save_fail": "저장 실패",
+  "node": "노드",
+  "input_payment_password": "지불 비밀번호를 입력해주십시요.",
+  "double_check_password_error": "2회의 비밀번호 입력이 불일치합니다.",
+  "receive_an_encrypted_message": "암호화 위치 정보를 받았습니다.열어보시겠습니까?",
+  "open": "열어보기",
+  "key_pair_error_share_location_again": "암호키 오류가 발생했습니다.위치 정보 공유 조작을 다시 진행하십시요.",
+  "activate_btc": "BTC 활성화",
+  "safety_certification_by_organizations": "권위 기구의 안전 인증을 받았습니다.",
+  "atlas_consensus_node": "Atlas 합의점",
+  "consensus_guarantee_for_hyberion": "헤버리안  생태를 위하여 합의 보증을 제공합니다.",
+  "home_atlas_description": "Atlas는 공간 공감도와 탄력적인 공간 편성이 특징인 고성능 지도블록 체인으로 공간편집, 계좌 자산이동, 자산 확인 등 공간 관련 서비스 수요를 해결할수 있습니다.또한 심사를 막고 참여를 개방하고 큰 착오도 허용하는 특징을 가지고 있습니다.향후 Atlas 체인이 구축되면 헤버리안을 지원하여 100억명을 서비스하는 중심지의 글로벌 지도 경제 시스템으로 될것입니다.\n\nAtlas는 기술적으로 고신축성, 저지연성, 저원가, 프라이버시 보호, 확장성 및 교호성을 실현하여 전 세계 체량이 거대한 지도 위치 추적 요청 및 위치 검색 요청을 지원합니다.향후 사용자는 미래 인터넷 접속 시 Atlas 노드가 돼 블록체인 네트워크의 안전성, 성능을 향상시키고 HYN 인센티브를 받을수 있게 된다.Atlas 노드의 인센티브 세부 사항은 아직 미확정 상태이지만 Map3 네트워크의 에지 노드 및 핵심 노드를 서로 연관시켜 통일할것입니다.",
+  "in_progress": "진행중",
+  "node_not_create_by_app_withdraw_fail": "이 노드는 {app_name}에서 만든것이 아니므로 실패하였습니다.",
+  "not_exceed_remain_share": "잔여 할당량을 초과할수 없습니다.",
+  "share_contract": "계약 공유",
+  "scan_qr_code_detail": "QR코드 번호를 스캔한후 상세정보 보기",
+  "latest_boot_node": "최신 작동 노드",
+  "see_more": "더 보기",
+  "show_qr_code": "qr코드번호 보기",
+  "legal_address_starting_1_or_bc_or_3": "1,bc,혹은3으로 시작되는 합법적인 접수 주소를 입력하세요.",
+  "save_update": "업데이트 저장",
+  "wallet_address_copied": "지갑 주소 복사 성공",
+  "wallet_address": "지갑 주소",
+  "face_fingerprint_password": "얼굴/지문과 비밀번호",
+  "update_success": "업데이트 성공",
+  "update_error": "업데이트 오류가 발생했습니다.",
+  "has_unconfirm_btc_wait": "아직 확인하지 않은 비트코인 계좌 이체가 있습니다.잠시후 다시 시도해주십시요.",
+  "pending": "확인중",
+  "confirm_num": "确认{num}次","확인{num}회",
+  "go_to_settings": "설정하기",
+  "go_to_setting_page_open_face_id": "설정 페이지에서 얼굴  ID 열기",
+  "go_to_setting_page_open_touch_id": "설정 페이지에서 Touch ID 열기",
+  "face_id_not_available_try_again": "얼굴 ID를 사용할수 없습니다.잠시후 다시 시도해주십시요.",
+  "touch_id_not_available_try_again": "Touch ID를 사용할수가 없습니다.잠시후 다시 시도해주십시요.",
+  "face_recognition": "얼굴 인식",
+  "fingerprint_recognition": "지문 인식",
+  "need_fingerprint": "지문이 필요합니다.",
+  "fingerprint_recognition_success": "지문 인식 성공",
+  "fingerprint_sensor": "지문 센서",
+  "no_fingerprint_detected": "지문을 인식하지 못했습니다.",
+  "go_setting_open_fingerprint": "설정 페이지에서 지문 인식 열기",
+  "face_fingerprint_verify": "얼굴 혹은 지문을 사용하여 인증 진행하기",
+  "biometrics": "생물 인식",
+  "biometrics_unavailable": "생물 인식을 사용할수 없습니다.",
+  "go_setting_page_set_pin": "설정 페이지에서 당신의 pin을 설정하기 바랍니다.",
+  "too_many_fail_try_again": "실패 횟수가 한도를 초과하였습니다.잠시후 다시 시도해주십시요.",
+  "too_many_fail_biometrics_unavailable": "실패횟수가 한도를 초과하였습니다.현재 생물인식을 사용할수 없습니다.",
+  "not_support_other_systems": "현재 기타 시스템은 지원하지 않습니다.",
+  "secret_free_payment": "무비번 결제",
+  "introduct_non_secret_payment": "무비번 결제 소개",
+  "non_secret_payment_introduction_detail": "무비번 결제방식은 지갑의 비밀번호를 모바일 기기의 Keychain / KeyStore에 보안 암호화 알고리즘을 통해 저장하며 거래시 생물학적 인식(지문 또는 얼굴) 감권을 이용하여 빠른 결제 및 서명을 완료합니다.",
+  "remind_after_open_non_secret_payment": "무비번 결제 기능을 시작 후 비빌먼호를 잘 백업해두시기 바랍니다.만일 비밀번호를 잊어버렸다면 도움말/개인 키을 불러와서 비밀번호를 다시 설정할수 있습니다.",
+  "risk_warning": "리스크 제시",
+  "risk_warning_detail_non_secret_payment": "모바일 기기의 생체 인식 안전등급/n거액 자산을 잘 이해하셔서 무비번 결재방식 \n공용 휴대폰을 절대 시작해서는 안되며 무비번 결재방식\n을 절대 열지 마십시요.",
+  "disclaimer": "면책 성명",
+  "disclaimer_detail_non_secret_payment": "휴대전화 제조업체의 생체 인식 기술 안전 등급이 각기 다르기때문에 우리는 사용자에게 이 편리한 기능의 사용에 주의할것을 권장합니다.사용중에서 그 어떠한 생물 인식 기술 허점으로 인해 발생한 자산 리스크에 대하여 본 소프트웨어는 그 어떠한 법률적 책임도 지지 않습니다.",
+  "non_secret_open_success": "무비번 결제 기능 사용 시작 성공",
+  "non_secret_open_fail": "무비번 결제 기능 사용 시작 실패",
+  "use_face_verify": "얼굴 인식기능을 사용하여 인증을 하기시 바랍니다.",
+  "cannot_fint_wallet": "로컬 지갑을 찾을수가 없습니다.",
+  "wallet_test": "지갑 테스트",
+  "active_btc": "BTC 활성화",
+  "show_qr": "qr코드번호 보기",
+  "wallet_address_error_hint": "1,bc,혹은3으로 시작되는 합법적인 접수 주소를 입력하세요.",
+  "save_update": "업데이트 저장",
+  "update_success": "업데이트 성공",
+  "update_failed": "업데이트 오류가 발생했습니다.",
+  "to_be_confirmed": "확인중",
+  "unconfirmed_btc_transfer_please_try_again_later_hint": "미확인 상태의 비트코인 계좌 이체가 있습니다.잠시후 다시 시도해주십시요.",
+  "transaction_detail_state_func": "확인{transactionDetailState}회",
   "setting_payment_password": "请设置支付密码"
 }
